--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/mockData.js"></script>
-    <script src="js/ui.js"></script>
-    <script src="js/caseManager.js"></script>
-    <script src="js/dashboard.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/main.js"></script>
+    <script src="auth.js"></script>
+    <script src="mockData.js"></script>
+    <script src="ui.js"></script>
+    <script src="caseManager.js"></script>
+    <script src="dashboard.js"></script>
+    <script src="auth.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
